--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangeviewdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangeviewdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeViewData:interface'
-    summary: <span data-ttu-id="e28e5-101">描述通过调用返回的数据的接口`rangeView.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="e28e5-101">An interface describing the data returned by calling `rangeView.toJSON()`</span></span><!-- --><span data-ttu-id="e28e5-102">.</span><span class="sxs-lookup"><span data-stu-id="e28e5-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`rangeView.toJSON()`<!-- -->.
     name: Excel.Interfaces.RangeViewData
     fullName: Excel.Interfaces.RangeViewData
     langs:
@@ -23,9 +23,9 @@ items:
       - 'excel!Excel.Interfaces.RangeViewData#valueTypes:member'
   - uid: 'excel!Excel.Interfaces.RangeViewData#cellAddresses:member'
     summary: |-
-      <span data-ttu-id="e28e5-103">表示 RangeView 的单元格地址。</span><span class="sxs-lookup"><span data-stu-id="e28e5-103">Represents the cell addresses of the RangeView.</span></span> <span data-ttu-id="e28e5-104">只读。</span><span class="sxs-lookup"><span data-stu-id="e28e5-104">Read-only.</span></span>
+      表示 RangeView 的单元格地址。
 
-      <span data-ttu-id="e28e5-105">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e28e5-105">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: cellAddresses
     fullName: cellAddresses
     langs:
@@ -38,9 +38,9 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeViewData#columnCount:member'
     summary: |-
-      <span data-ttu-id="e28e5-106">返回可见列数。</span><span class="sxs-lookup"><span data-stu-id="e28e5-106">Returns the number of visible columns.</span></span> <span data-ttu-id="e28e5-107">只读。</span><span class="sxs-lookup"><span data-stu-id="e28e5-107">Read-only.</span></span>
+      可见列的数量。
 
-      <span data-ttu-id="e28e5-108">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e28e5-108">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnCount
     fullName: columnCount
     langs:
@@ -53,9 +53,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeViewData#formulas:member'
     summary: |-
-      <span data-ttu-id="e28e5-109">表示采用 A1 表示法的公式。</span><span class="sxs-lookup"><span data-stu-id="e28e5-109">Represents the formula in A1-style notation.</span></span>
+      表示采用 A1 表示法的公式。
 
-      <span data-ttu-id="e28e5-110">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e28e5-110">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulas
     fullName: formulas
     langs:
@@ -68,9 +68,9 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeViewData#formulasLocal:member'
     summary: |-
-      <span data-ttu-id="e28e5-p103">表示采用 A1 表示法的公式，使用用户语言和数字格式区域设置。例如，英语中的公式 "=SUM(A1, 1.5)" 在德语中变为 "=SUMME(A1; 1,5)"。</span><span class="sxs-lookup"><span data-stu-id="e28e5-p103">Represents the formula in A1-style notation, in the user's language and number-formatting locale. For example, the English "=SUM(A1, 1.5)" formula would become "=SUMME(A1; 1,5)" in German.</span></span>
+      表示采用 A1 表示法的公式，使用用户语言和数字格式区域设置。例如，英语中的公式 "=SUM(A1, 1.5)" 在德语中变为 "=SUMME(A1; 1,5)"。
 
-      <span data-ttu-id="e28e5-113">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e28e5-113">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulasLocal
     fullName: formulasLocal
     langs:
@@ -83,9 +83,9 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeViewData#formulasR1C1:member'
     summary: |-
-      <span data-ttu-id="e28e5-114">表示采用 R1C1 表示法的公式。</span><span class="sxs-lookup"><span data-stu-id="e28e5-114">Represents the formula in R1C1-style notation.</span></span>
+      表示采用 R1C1 样式表示法的公式。
 
-      <span data-ttu-id="e28e5-115">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e28e5-115">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulasR1C1
     fullName: formulasR1C1
     langs:
@@ -98,9 +98,9 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeViewData#index:member'
     summary: |-
-      <span data-ttu-id="e28e5-116">返回表示 RangeView 的索引的值。</span><span class="sxs-lookup"><span data-stu-id="e28e5-116">Returns a value that represents the index of the RangeView.</span></span> <span data-ttu-id="e28e5-117">只读。</span><span class="sxs-lookup"><span data-stu-id="e28e5-117">Read-only.</span></span>
+      返回表示 RangeView 的索引的值。
 
-      <span data-ttu-id="e28e5-118">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e28e5-118">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
     fullName: index
     langs:
@@ -113,9 +113,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeViewData#numberFormat:member'
     summary: |-
-      <span data-ttu-id="e28e5-119">表示 Excel 中指定单元格的数字格式代码。</span><span class="sxs-lookup"><span data-stu-id="e28e5-119">Represents Excel's number format code for the given cell.</span></span>
+      表示 Excel 中指定单元格的数字格式代码。
 
-      <span data-ttu-id="e28e5-120">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e28e5-120">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
     fullName: numberFormat
     langs:
@@ -128,9 +128,9 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeViewData#rowCount:member'
     summary: |-
-      <span data-ttu-id="e28e5-121">返回可见行数。</span><span class="sxs-lookup"><span data-stu-id="e28e5-121">Returns the number of visible rows.</span></span> <span data-ttu-id="e28e5-122">只读。</span><span class="sxs-lookup"><span data-stu-id="e28e5-122">Read-only.</span></span>
+      可见行的数目。
 
-      <span data-ttu-id="e28e5-123">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e28e5-123">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowCount
     fullName: rowCount
     langs:
@@ -143,9 +143,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeViewData#rows:member'
     summary: |-
-      <span data-ttu-id="e28e5-124">表示一组与 range 相关联的 RangeView。</span><span class="sxs-lookup"><span data-stu-id="e28e5-124">Represents a collection of range views associated with the range.</span></span> <span data-ttu-id="e28e5-125">只读。</span><span class="sxs-lookup"><span data-stu-id="e28e5-125">Read-only.</span></span>
+      表示一组与 range 相关联的 RangeView。
 
-      <span data-ttu-id="e28e5-126">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e28e5-126">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rows
     fullName: rows
     langs:
@@ -158,9 +158,9 @@ items:
           - 'excel!Excel.Interfaces.RangeViewData#rows~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeViewData#text:member'
     summary: |-
-      <span data-ttu-id="e28e5-127">指定区域的文本值。</span><span class="sxs-lookup"><span data-stu-id="e28e5-127">Text values of the specified range.</span></span> <span data-ttu-id="e28e5-128">文本值与单元格宽度无关。</span><span class="sxs-lookup"><span data-stu-id="e28e5-128">The Text value will not depend on the cell width.</span></span> <span data-ttu-id="e28e5-129">Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。</span><span class="sxs-lookup"><span data-stu-id="e28e5-129">The \# sign substitution that happens in Excel UI will not affect the text value returned by the API.</span></span> <span data-ttu-id="e28e5-130">只读。</span><span class="sxs-lookup"><span data-stu-id="e28e5-130">Read-only.</span></span>
+      指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。
 
-      <span data-ttu-id="e28e5-131">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e28e5-131">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -173,9 +173,9 @@ items:
           - 'string[][]'
   - uid: 'excel!Excel.Interfaces.RangeViewData#values:member'
     summary: |-
-      <span data-ttu-id="e28e5-132">表示指定的 RangeView 的原始值。</span><span class="sxs-lookup"><span data-stu-id="e28e5-132">Represents the raw values of the specified range view.</span></span> <span data-ttu-id="e28e5-133">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="e28e5-133">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="e28e5-134">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="e28e5-134">Cells that contain an error will return the error string.</span></span>
+      表示指定的 RangeView 的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      <span data-ttu-id="e28e5-135">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e28e5-135">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: values
     fullName: values
     langs:
@@ -188,9 +188,9 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Interfaces.RangeViewData#valueTypes:member'
     summary: |-
-      <span data-ttu-id="e28e5-136">表示每个单元格的数据类型。</span><span class="sxs-lookup"><span data-stu-id="e28e5-136">Represents the type of data of each cell.</span></span> <span data-ttu-id="e28e5-137">只读。</span><span class="sxs-lookup"><span data-stu-id="e28e5-137">Read-only.</span></span>
+      表示每个单元格的数据类型。
 
-      <span data-ttu-id="e28e5-138">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e28e5-138">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueTypes
     fullName: valueTypes
     langs:
