--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.chartformatstring.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.chartformatstring.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartFormatString:class'
     summary: |-
-      <span data-ttu-id="130d7-101">表示与图表相关的对象中包含文本的子字符串，如 ChartTitle 对象、ChartAxisTitle 对象等。</span><span class="sxs-lookup"><span data-stu-id="130d7-101">Represents the substring in chart related objects that contains text, like ChartTitle object, ChartAxisTitle object, etc.</span></span>
+      表示与图表相关的对象中包含文本的子字符串，如 ChartTitle 对象、ChartAxisTitle 对象等。
 
-      <span data-ttu-id="130d7-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="130d7-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartFormatString
     fullName: Excel.ChartFormatString
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartFormatString#context:member'
@@ -23,7 +23,7 @@ items:
       - 'excel!Excel.ChartFormatString#set:member(2)'
       - 'excel!Excel.ChartFormatString#toJSON:member(1)'
   - uid: 'excel!Excel.ChartFormatString#context:member'
-    summary: <span data-ttu-id="130d7-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="130d7-103">The request context associated with the object.</span></span> <span data-ttu-id="130d7-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="130d7-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -36,9 +36,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartFormatString#font:member'
     summary: |-
-      <span data-ttu-id="130d7-105">代表 "图表字符" 对象的字体属性，如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="130d7-105">Represents the font attributes, such as font name, font size, color, etc. of chart characters object.</span></span>
+      代表 "图表字符" 对象的字体属性，如字体名称、字体大小、颜色等。
 
-      <span data-ttu-id="130d7-106">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="130d7-106">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -50,7 +50,7 @@ items:
         type:
           - 'excel!Excel.ChartFont:class'
   - uid: 'excel!Excel.ChartFormatString#load:member(1)'
-    summary: <span data-ttu-id="130d7-107">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="130d7-107">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="130d7-108">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="130d7-108">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -64,11 +64,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="130d7-109">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="130d7-109">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartFormatStringLoadOptions:interface'
   - uid: 'excel!Excel.ChartFormatString#load:member(2)'
-    summary: <span data-ttu-id="130d7-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="130d7-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="130d7-111">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="130d7-111">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -82,11 +82,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="130d7-112">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="130d7-112">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartFormatString#load:member(3)'
-    summary: <span data-ttu-id="130d7-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="130d7-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="130d7-114">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="130d7-114">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -104,7 +104,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="130d7-115">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="130d7-115">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -112,9 +112,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.ChartFormatString#set:member(1)'
-    summary: '<span data-ttu-id="130d7-116">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="130d7-116">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="130d7-117">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="130d7-117">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="130d7-118">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="130d7-118">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartFormatString): void`
     name: 'set(properties, options)'
@@ -130,15 +130,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="130d7-119">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="130d7-119">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartFormatStringUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="130d7-120">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="130d7-120">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartFormatString#set:member(2)'
-    summary: '<span data-ttu-id="130d7-121">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="130d7-121">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -156,7 +156,7 @@ items:
           type:
             - 'excel!Excel.ChartFormatString:class'
   - uid: 'excel!Excel.ChartFormatString#toJSON:member(1)'
-    summary: '<span data-ttu-id="130d7-122">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="130d7-122">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="130d7-123">.</span><span class="sxs-lookup"><span data-stu-id="130d7-123"></span></span> <span data-ttu-id="130d7-124">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="130d7-124"></span></span><!-- --><span data-ttu-id="130d7-125">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartFormatString 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartFormatStringData`</span><span class="sxs-lookup"><span data-stu-id="130d7-125">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartFormatString object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartFormatStringData`</span></span><!-- --><span data-ttu-id="130d7-126">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="130d7-126">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartFormatString 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartFormatStringData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -169,7 +169,7 @@ items:
           - 'excel!Excel.Interfaces.ChartFormatStringData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -181,7 +181,7 @@ references:
     name: Excel.Interfaces.ChartFormatStringLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartFormatStringUpdateData:interface'
     name: Interfaces.ChartFormatStringUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartFormatStringData:interface'
     name: Excel.Interfaces.ChartFormatStringData
