--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.custompropertydata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.custompropertydata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CustomPropertyData:interface'
-    summary: <span data-ttu-id="d3bb2-101">描述通过调用返回的数据的接口`customProperty.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="d3bb2-101">An interface describing the data returned by calling `customProperty.toJSON()`</span></span><!-- --><span data-ttu-id="d3bb2-102">.</span><span class="sxs-lookup"><span data-stu-id="d3bb2-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`customProperty.toJSON()`<!-- -->.
     name: Excel.Interfaces.CustomPropertyData
     fullName: Excel.Interfaces.CustomPropertyData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.CustomPropertyData#value:member'
   - uid: 'excel!Excel.Interfaces.CustomPropertyData#key:member'
     summary: |-
-      <span data-ttu-id="d3bb2-103">获取 customProperty 的键。</span><span class="sxs-lookup"><span data-stu-id="d3bb2-103">Gets the key of the custom property.</span></span> <span data-ttu-id="d3bb2-104">只读。</span><span class="sxs-lookup"><span data-stu-id="d3bb2-104">Read only.</span></span>
+      自定义属性的键。
 
-      <span data-ttu-id="d3bb2-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3bb2-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: key
     fullName: key
     langs:
@@ -29,9 +29,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.CustomPropertyData#type:member'
     summary: |-
-      <span data-ttu-id="d3bb2-106">获取自定义属性的值类型。</span><span class="sxs-lookup"><span data-stu-id="d3bb2-106">Gets the value type of the custom property.</span></span> <span data-ttu-id="d3bb2-107">只读。</span><span class="sxs-lookup"><span data-stu-id="d3bb2-107">Read only.</span></span>
+      用于自定义属性的值的类型。
 
-      <span data-ttu-id="d3bb2-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3bb2-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.CustomPropertyData#type~0:complex'
   - uid: 'excel!Excel.Interfaces.CustomPropertyData#value:member'
     summary: |-
-      <span data-ttu-id="d3bb2-109">获取或设置自定义属性的值。</span><span class="sxs-lookup"><span data-stu-id="d3bb2-109">Gets or sets the value of the custom property.</span></span>
+      自定义属性的值。
 
-      <span data-ttu-id="d3bb2-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3bb2-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
