--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.rangefilldata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.rangefilldata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeFillData:interface'
-    summary: <span data-ttu-id="3691b-101">描述通过调用返回的数据的接口`rangeFill.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="3691b-101">An interface describing the data returned by calling `rangeFill.toJSON()`</span></span><!-- --><span data-ttu-id="3691b-102">.</span><span class="sxs-lookup"><span data-stu-id="3691b-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`rangeFill.toJSON()`<!-- -->.
     name: Excel.Interfaces.RangeFillData
     fullName: Excel.Interfaces.RangeFillData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.RangeFillData#color:member'
   - uid: 'excel!Excel.Interfaces.RangeFillData#color:member'
     summary: |-
-      <span data-ttu-id="3691b-103">代表表单\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="3691b-103">HTML color code representing the color of the background, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
+      代表表单\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。
 
-      <span data-ttu-id="3691b-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3691b-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
