--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.workbookdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.workbookdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.WorkbookData:interface'
-    summary: <span data-ttu-id="1a97b-101">描述通过调用返回的数据的接口`workbook.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="1a97b-101">An interface describing the data returned by calling `workbook.toJSON()`</span></span><!-- --><span data-ttu-id="1a97b-102">.</span><span class="sxs-lookup"><span data-stu-id="1a97b-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`workbook.toJSON()`<!-- -->.
     name: Excel.Interfaces.WorkbookData
     fullName: Excel.Interfaces.WorkbookData
     langs:
@@ -23,9 +23,9 @@ items:
       - 'excel!Excel.Interfaces.WorkbookData#worksheets:member'
   - uid: 'excel!Excel.Interfaces.WorkbookData#bindings:member'
     summary: |-
-      <span data-ttu-id="1a97b-103">表示属于工作簿的绑定的集合。</span><span class="sxs-lookup"><span data-stu-id="1a97b-103">Represents a collection of bindings that are part of the workbook.</span></span> <span data-ttu-id="1a97b-104">只读。</span><span class="sxs-lookup"><span data-stu-id="1a97b-104">Read-only.</span></span>
+      表示属于工作簿的绑定的集合。
 
-      <span data-ttu-id="1a97b-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a97b-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bindings
     fullName: bindings
     langs:
@@ -38,9 +38,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#bindings~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#customXmlParts:member'
     summary: |-
-      <span data-ttu-id="1a97b-106">表示此工作簿包含的自定义 XML 部件的集合。</span><span class="sxs-lookup"><span data-stu-id="1a97b-106">Represents the collection of custom XML parts contained by this workbook.</span></span> <span data-ttu-id="1a97b-107">只读。</span><span class="sxs-lookup"><span data-stu-id="1a97b-107">Read-only.</span></span>
+      表示此工作簿包含的自定义 XML 部件的集合。
 
-      <span data-ttu-id="1a97b-108">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a97b-108">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: customXmlParts
     fullName: customXmlParts
     langs:
@@ -53,9 +53,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#customXmlParts~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#name:member'
     summary: |-
-      <span data-ttu-id="1a97b-109">获取工作簿名称。</span><span class="sxs-lookup"><span data-stu-id="1a97b-109">Gets the workbook name.</span></span> <span data-ttu-id="1a97b-110">只读。</span><span class="sxs-lookup"><span data-stu-id="1a97b-110">Read-only.</span></span>
+      获取工作簿名称。
 
-      <span data-ttu-id="1a97b-111">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a97b-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -68,9 +68,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.WorkbookData#names:member'
     summary: |-
-      <span data-ttu-id="1a97b-112">表示工作簿范围内的已命名项目（称为区域和常量）的集合。</span><span class="sxs-lookup"><span data-stu-id="1a97b-112">Represents a collection of workbook scoped named items (named ranges and constants).</span></span> <span data-ttu-id="1a97b-113">只读。</span><span class="sxs-lookup"><span data-stu-id="1a97b-113">Read-only.</span></span>
+      表示工作簿范围内的已命名项目（称为区域和常量）的集合。
 
-      <span data-ttu-id="1a97b-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a97b-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: names
     fullName: names
     langs:
@@ -83,9 +83,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#names~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#pivotTables:member'
     summary: |-
-      <span data-ttu-id="1a97b-115">表示一组与 workbook 相关联的 PivotTable 对象。</span><span class="sxs-lookup"><span data-stu-id="1a97b-115">Represents a collection of PivotTables associated with the workbook.</span></span> <span data-ttu-id="1a97b-116">只读。</span><span class="sxs-lookup"><span data-stu-id="1a97b-116">Read-only.</span></span>
+      表示一组与 workbook 相关联的 PivotTable 对象。
 
-      <span data-ttu-id="1a97b-117">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a97b-117">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTables
     fullName: pivotTables
     langs:
@@ -98,9 +98,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#pivotTables~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#properties:member'
     summary: |-
-      <span data-ttu-id="1a97b-118">获取工作簿属性。</span><span class="sxs-lookup"><span data-stu-id="1a97b-118">Gets the workbook properties.</span></span> <span data-ttu-id="1a97b-119">只读。</span><span class="sxs-lookup"><span data-stu-id="1a97b-119">Read-only.</span></span>
+      获取工作簿属性。
 
-      <span data-ttu-id="1a97b-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a97b-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: properties
     fullName: properties
     langs:
@@ -113,9 +113,9 @@ items:
           - 'excel!Excel.Interfaces.DocumentPropertiesData:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookData#protection:member'
     summary: |-
-      <span data-ttu-id="1a97b-121">返回工作簿的工作簿保护对象。</span><span class="sxs-lookup"><span data-stu-id="1a97b-121">Returns workbook protection object for a workbook.</span></span> <span data-ttu-id="1a97b-122">只读。</span><span class="sxs-lookup"><span data-stu-id="1a97b-122">Read-only.</span></span>
+      返回工作簿的保护对象。
 
-      <span data-ttu-id="1a97b-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a97b-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
     fullName: protection
     langs:
@@ -128,9 +128,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookProtectionData:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookData#readOnly:member'
     summary: |-
-      <span data-ttu-id="1a97b-124">如果在只读模式下打开工作簿，则为 True。</span><span class="sxs-lookup"><span data-stu-id="1a97b-124">True if the workbook is open in Read-only mode.</span></span> <span data-ttu-id="1a97b-125">只读。</span><span class="sxs-lookup"><span data-stu-id="1a97b-125">Read-only.</span></span>
+      如果在只读模式下打开工作簿，则为 True。
 
-      <span data-ttu-id="1a97b-126">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a97b-126">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readOnly
     fullName: readOnly
     langs:
@@ -143,9 +143,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookData#settings:member'
     summary: |-
-      <span data-ttu-id="1a97b-127">表示一组与 workbook 相关联的 setting 对象。</span><span class="sxs-lookup"><span data-stu-id="1a97b-127">Represents a collection of Settings associated with the workbook.</span></span> <span data-ttu-id="1a97b-128">只读。</span><span class="sxs-lookup"><span data-stu-id="1a97b-128">Read-only.</span></span>
+      表示一组与 workbook 相关联的 setting 对象。
 
-      <span data-ttu-id="1a97b-129">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a97b-129">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: settings
     fullName: settings
     langs:
@@ -158,9 +158,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#settings~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#styles:member'
     summary: |-
-      <span data-ttu-id="1a97b-130">表示与工作簿关联的样式的集合。</span><span class="sxs-lookup"><span data-stu-id="1a97b-130">Represents a collection of styles associated with the workbook.</span></span> <span data-ttu-id="1a97b-131">只读。</span><span class="sxs-lookup"><span data-stu-id="1a97b-131">Read-only.</span></span>
+      表示与工作簿关联的样式的集合。
 
-      <span data-ttu-id="1a97b-132">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a97b-132">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: styles
     fullName: styles
     langs:
@@ -173,9 +173,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#styles~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#tables:member'
     summary: |-
-      <span data-ttu-id="1a97b-133">表示与工作簿关联的表的集合。</span><span class="sxs-lookup"><span data-stu-id="1a97b-133">Represents a collection of tables associated with the workbook.</span></span> <span data-ttu-id="1a97b-134">只读。</span><span class="sxs-lookup"><span data-stu-id="1a97b-134">Read-only.</span></span>
+      表示与工作簿关联的表的集合。
 
-      <span data-ttu-id="1a97b-135">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a97b-135">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
     fullName: tables
     langs:
@@ -188,9 +188,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookData#tables~0:complex'
   - uid: 'excel!Excel.Interfaces.WorkbookData#worksheets:member'
     summary: |-
-      <span data-ttu-id="1a97b-136">表示与工作簿关联的工作表的集合。</span><span class="sxs-lookup"><span data-stu-id="1a97b-136">Represents a collection of worksheets associated with the workbook.</span></span> <span data-ttu-id="1a97b-137">只读。</span><span class="sxs-lookup"><span data-stu-id="1a97b-137">Read-only.</span></span>
+      表示与工作簿关联的工作表的集合。
 
-      <span data-ttu-id="1a97b-138">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a97b-138">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheets
     fullName: worksheets
     langs:
