--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.pivotfield.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.pivotfield.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.PivotField:class'
     summary: |-
-      <span data-ttu-id="de79b-101">表示 Excel 透视字段。</span><span class="sxs-lookup"><span data-stu-id="de79b-101">Represents the Excel PivotField.</span></span>
+      表示 Excel 透视字段。
 
-      <span data-ttu-id="de79b-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="de79b-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.PivotField
     fullName: Excel.PivotField
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.PivotField#context:member'
@@ -28,7 +28,7 @@ items:
       - 'excel!Excel.PivotField#subtotals:member'
       - 'excel!Excel.PivotField#toJSON:member(1)'
   - uid: 'excel!Excel.PivotField#context:member'
-    summary: <span data-ttu-id="de79b-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="de79b-103">The request context associated with the object.</span></span> <span data-ttu-id="de79b-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="de79b-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -41,9 +41,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.PivotField#id:member'
     summary: |-
-      <span data-ttu-id="de79b-105">PivotField 的 ID。</span><span class="sxs-lookup"><span data-stu-id="de79b-105">Id of the PivotField.</span></span>
+      PivotField 的 ID。
 
-      <span data-ttu-id="de79b-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="de79b-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -56,9 +56,9 @@ items:
           - string
   - uid: 'excel!Excel.PivotField#items:member'
     summary: |-
-      <span data-ttu-id="de79b-107">返回与 PivotField 相关联的 PivotFields。</span><span class="sxs-lookup"><span data-stu-id="de79b-107">Returns the PivotFields associated with the PivotField.</span></span>
+      返回与 PivotField 相关联的 PivotFields。
 
-      <span data-ttu-id="de79b-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="de79b-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: items
     fullName: items
     langs:
@@ -70,7 +70,7 @@ items:
         type:
           - 'excel!Excel.PivotItemCollection:class'
   - uid: 'excel!Excel.PivotField#load:member(1)'
-    summary: <span data-ttu-id="de79b-109">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="de79b-109">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="de79b-110">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="de79b-110">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -84,11 +84,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="de79b-111">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="de79b-111">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.PivotFieldLoadOptions:interface'
   - uid: 'excel!Excel.PivotField#load:member(2)'
-    summary: <span data-ttu-id="de79b-112">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="de79b-112">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="de79b-113">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="de79b-113">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -102,11 +102,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="de79b-114">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="de79b-114">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.PivotField#load:member(3)'
-    summary: <span data-ttu-id="de79b-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="de79b-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="de79b-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="de79b-116">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -124,7 +124,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="de79b-117">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="de79b-117">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -133,9 +133,9 @@ items:
                       }
   - uid: 'excel!Excel.PivotField#name:member'
     summary: |-
-      <span data-ttu-id="de79b-118">PivotField 的名称。</span><span class="sxs-lookup"><span data-stu-id="de79b-118">Name of the PivotField.</span></span>
+      PivotField 的名称。
 
-      <span data-ttu-id="de79b-119">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="de79b-119">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -147,9 +147,9 @@ items:
         type:
           - string
   - uid: 'excel!Excel.PivotField#set:member(1)'
-    summary: '<span data-ttu-id="de79b-120">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="de79b-120">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="de79b-121">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="de79b-121">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="de79b-122">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="de79b-122">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.PivotField): void`
     name: 'set(properties, options)'
@@ -165,15 +165,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="de79b-123">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="de79b-123">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.PivotFieldUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="de79b-124">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="de79b-124">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.PivotField#set:member(2)'
-    summary: '<span data-ttu-id="de79b-125">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="de79b-125">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -192,9 +192,9 @@ items:
             - 'excel!Excel.PivotField:class'
   - uid: 'excel!Excel.PivotField#showAllItems:member'
     summary: |-
-      <span data-ttu-id="de79b-126">确定是否显示 PivotField 的所有项。</span><span class="sxs-lookup"><span data-stu-id="de79b-126">Determines whether to show all items of the PivotField.</span></span>
+      确定是否显示 PivotField 的所有项。
 
-      <span data-ttu-id="de79b-127">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="de79b-127">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAllItems
     fullName: showAllItems
     langs:
@@ -207,9 +207,9 @@ items:
           - boolean
   - uid: 'excel!Excel.PivotField#sortByLabels:member(1)'
     summary: |-
-      <span data-ttu-id="de79b-128">PivotField 排序。</span><span class="sxs-lookup"><span data-stu-id="de79b-128">Sorts the PivotField.</span></span> <span data-ttu-id="de79b-129">如果指定 DataPivotHierarchy，则会基于它进行排序，如果未指定，则会基于 PivotField 本身进行排序。</span><span class="sxs-lookup"><span data-stu-id="de79b-129">If a DataPivotHierarchy is specified, then sort will be applied based on it, if not sort will be based on the PivotField itself.</span></span>
+      PivotField 排序。 如果指定 DataPivotHierarchy，则会基于它进行排序，如果未指定，则会基于 PivotField 本身进行排序。
 
-      <span data-ttu-id="de79b-130">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="de79b-130">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sortByLabels(sortBy)
     fullName: sortByLabels(sortBy)
     langs:
@@ -223,14 +223,14 @@ items:
         description: ''
       parameters:
         - id: sortBy
-          description: <span data-ttu-id="de79b-131">表示按升序还是降序进行排序。</span><span class="sxs-lookup"><span data-stu-id="de79b-131">Represents whether the sorting is done in an ascending or descending order.</span></span>
+          description: 指定是按升序还是降序进行排序。
           type:
             - 'excel!Excel.SortBy:enum'
   - uid: 'excel!Excel.PivotField#subtotals:member'
     summary: |-
-      <span data-ttu-id="de79b-132">PivotField 小计。</span><span class="sxs-lookup"><span data-stu-id="de79b-132">Subtotals of the PivotField.</span></span>
+      PivotField 小计。
 
-      <span data-ttu-id="de79b-133">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="de79b-133">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: subtotals
     fullName: subtotals
     langs:
@@ -242,7 +242,7 @@ items:
         type:
           - 'excel!Excel.Subtotals:interface'
   - uid: 'excel!Excel.PivotField#toJSON:member(1)'
-    summary: '<span data-ttu-id="de79b-134">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="de79b-134">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="de79b-135">.</span><span class="sxs-lookup"><span data-stu-id="de79b-135"></span></span> <span data-ttu-id="de79b-136">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="de79b-136"></span></span><!-- --><span data-ttu-id="de79b-137">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel. 透视字段对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.PivotFieldData`</span><span class="sxs-lookup"><span data-stu-id="de79b-137">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.PivotField object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.PivotFieldData`</span></span><!-- --><span data-ttu-id="de79b-138">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="de79b-138">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel. 透视字段对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.PivotFieldData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -255,7 +255,7 @@ items:
           - 'excel!Excel.Interfaces.PivotFieldData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -267,7 +267,7 @@ references:
     name: Excel.Interfaces.PivotFieldLoadOptions
   - uid: 'excel!Excel.Interfaces.PivotFieldUpdateData:interface'
     name: Interfaces.PivotFieldUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.SortBy:enum'
     name: SortBy
