--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartplotareaupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartplotareaupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData:interface'
-    summary: '<span data-ttu-id="6fc04-101">一个用于更新 ChartPlotArea 对象上的数据的接口，可用于`chartPlotArea.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="6fc04-101">An interface for updating data on the ChartPlotArea object, for use in `chartPlotArea.set({ ... })`</span></span><!-- --><span data-ttu-id="6fc04-102">.</span><span class="sxs-lookup"><span data-stu-id="6fc04-102"></span></span>'
+    summary: '一个用于更新 ChartPlotArea 对象上的数据的接口，可用于`chartPlotArea.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartPlotAreaUpdateData
     fullName: Excel.Interfaces.ChartPlotAreaUpdateData
     langs:
@@ -21,9 +21,9 @@ items:
       - 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="6fc04-103">表示图表 plotArea 的格式。</span><span class="sxs-lookup"><span data-stu-id="6fc04-103">Represents the formatting of a chart plotArea.</span></span>
+      指定图表 plotArea 的格式。
 
-      <span data-ttu-id="6fc04-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6fc04-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -36,9 +36,9 @@ items:
           - 'excel!Excel.Interfaces.ChartPlotAreaFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#height:member'
     summary: |-
-      <span data-ttu-id="6fc04-105">表示 plotArea 的高度值。</span><span class="sxs-lookup"><span data-stu-id="6fc04-105">Represents the height value of plotArea.</span></span>
+      指定 plotArea 的高度值。
 
-      <span data-ttu-id="6fc04-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6fc04-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -51,9 +51,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#insideHeight:member'
     summary: |-
-      <span data-ttu-id="6fc04-107">表示 plotArea 的 insideHeight 值。</span><span class="sxs-lookup"><span data-stu-id="6fc04-107">Represents the insideHeight value of plotArea.</span></span>
+      指定 plotArea 的 insideHeight 值。
 
-      <span data-ttu-id="6fc04-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6fc04-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideHeight
     fullName: insideHeight
     langs:
@@ -66,9 +66,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#insideLeft:member'
     summary: |-
-      <span data-ttu-id="6fc04-109">表示 plotArea 的 insideLeft 值。</span><span class="sxs-lookup"><span data-stu-id="6fc04-109">Represents the insideLeft value of plotArea.</span></span>
+      指定 plotArea 的 insideLeft 值。
 
-      <span data-ttu-id="6fc04-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6fc04-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideLeft
     fullName: insideLeft
     langs:
@@ -81,9 +81,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#insideTop:member'
     summary: |-
-      <span data-ttu-id="6fc04-111">表示 plotArea 的 insideTop 值。</span><span class="sxs-lookup"><span data-stu-id="6fc04-111">Represents the insideTop value of plotArea.</span></span>
+      指定 plotArea 的 insideTop 值。
 
-      <span data-ttu-id="6fc04-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6fc04-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideTop
     fullName: insideTop
     langs:
@@ -96,9 +96,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#insideWidth:member'
     summary: |-
-      <span data-ttu-id="6fc04-113">表示 plotArea 的 insideWidth 值。</span><span class="sxs-lookup"><span data-stu-id="6fc04-113">Represents the insideWidth value of plotArea.</span></span>
+      指定 plotArea 的 insideWidth 值。
 
-      <span data-ttu-id="6fc04-114">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6fc04-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideWidth
     fullName: insideWidth
     langs:
@@ -111,9 +111,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#left:member'
     summary: |-
-      <span data-ttu-id="6fc04-115">表示 plotArea 的 left 值。</span><span class="sxs-lookup"><span data-stu-id="6fc04-115">Represents the left value of plotArea.</span></span>
+      指定 plotArea 的左侧值。
 
-      <span data-ttu-id="6fc04-116">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6fc04-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -126,9 +126,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#position:member'
     summary: |-
-      <span data-ttu-id="6fc04-117">表示 plotArea 的位置。</span><span class="sxs-lookup"><span data-stu-id="6fc04-117">Represents the position of plotArea.</span></span>
+      指定 plotArea 的位置。
 
-      <span data-ttu-id="6fc04-118">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6fc04-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -141,9 +141,9 @@ items:
           - 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#position~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#top:member'
     summary: |-
-      <span data-ttu-id="6fc04-119">表示 plotArea 的 top 值。</span><span class="sxs-lookup"><span data-stu-id="6fc04-119">Represents the top value of plotArea.</span></span>
+      指定 plotArea 的最高值。
 
-      <span data-ttu-id="6fc04-120">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6fc04-120">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -156,9 +156,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaUpdateData#width:member'
     summary: |-
-      <span data-ttu-id="6fc04-121">表示 plotArea 的宽度值。</span><span class="sxs-lookup"><span data-stu-id="6fc04-121">Represents the width value of plotArea.</span></span>
+      指定 plotArea 的宽度值。
 
-      <span data-ttu-id="6fc04-122">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6fc04-122">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
