--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.geometricshapedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.geometricshapedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.GeometricShapeData:interface'
-    summary: <span data-ttu-id="bc46e-101">描述通过调用返回的数据的接口`geometricShape.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="bc46e-101">An interface describing the data returned by calling `geometricShape.toJSON()`</span></span><!-- --><span data-ttu-id="bc46e-102">.</span><span class="sxs-lookup"><span data-stu-id="bc46e-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`geometricShape.toJSON()`<!-- -->.
     name: Excel.Interfaces.GeometricShapeData
     fullName: Excel.Interfaces.GeometricShapeData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.GeometricShapeData#id:member'
   - uid: 'excel!Excel.Interfaces.GeometricShapeData#id:member'
     summary: |-
-      <span data-ttu-id="bc46e-103">返回形状标识符。</span><span class="sxs-lookup"><span data-stu-id="bc46e-103">Returns the shape identifier.</span></span> <span data-ttu-id="bc46e-104">只读。</span><span class="sxs-lookup"><span data-stu-id="bc46e-104">Read-only.</span></span>
+      返回形状标识符。
 
-      <span data-ttu-id="bc46e-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bc46e-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
