--- a/docs/docs-ref-autogen/visio/visio/visio.shapecollection.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.shapecollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'visio!Visio.ShapeCollection:class'
     summary: |-
-      <span data-ttu-id="49ed5-101">表示 Shape 集合。</span><span class="sxs-lookup"><span data-stu-id="49ed5-101">Represents the Shape Collection.</span></span>
+      表示 Shape 集合。
 
-      <span data-ttu-id="49ed5-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="49ed5-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.ShapeCollection
     fullName: Visio.ShapeCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.ShapeCollection#context:member'
@@ -23,7 +23,7 @@ items:
       - 'visio!Visio.ShapeCollection#load:member(3)'
       - 'visio!Visio.ShapeCollection#toJSON:member(1)'
   - uid: 'visio!Visio.ShapeCollection#context:member'
-    summary: <span data-ttu-id="49ed5-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="49ed5-103">The request context associated with the object.</span></span> <span data-ttu-id="49ed5-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="49ed5-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -36,9 +36,9 @@ items:
           - 'visio!Visio.RequestContext:class'
   - uid: 'visio!Visio.ShapeCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="49ed5-105">获取集合中的形状数量。</span><span class="sxs-lookup"><span data-stu-id="49ed5-105">Gets the number of Shapes in the collection.</span></span>
+      获取集合中的形状数量。
 
-      <span data-ttu-id="49ed5-106">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="49ed5-106">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -52,7 +52,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="49ed5-107">示例</span><span class="sxs-lookup"><span data-stu-id="49ed5-107">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Visio.run(session, function (ctx) {
@@ -70,9 +70,9 @@ items:
           ```
   - uid: 'visio!Visio.ShapeCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="49ed5-108">按键（名称或索引）获取形状。</span><span class="sxs-lookup"><span data-stu-id="49ed5-108">Gets a Shape using its key (name or Index).</span></span>
+      按键（名称或索引）获取形状。
 
-      <span data-ttu-id="49ed5-109">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="49ed5-109">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -86,11 +86,11 @@ items:
         description: ''
       parameters:
         - id: key
-          description: <span data-ttu-id="49ed5-110">键是要检索的形状的名称或索引。</span><span class="sxs-lookup"><span data-stu-id="49ed5-110">Key is the Name or Index of the shape to be retrieved.</span></span>
+          description: 键是要检索的形状的名称或索引。
           type:
             - number | string
   - uid: 'visio!Visio.ShapeCollection#items:member'
-    summary: <span data-ttu-id="49ed5-111">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="49ed5-111">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -102,15 +102,15 @@ items:
         type:
           - 'visio!Visio.ShapeCollection#items~0:complex'
   - uid: 'visio!Visio.ShapeCollection#load:member(1)'
-    summary: <span data-ttu-id="49ed5-112">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="49ed5-112">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="49ed5-113">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="49ed5-113">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="49ed5-114">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="49ed5-114">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="49ed5-115">`load(option?: string | string[]): Visio.ShapeCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="49ed5-115">`load(option?: string | string[]): Visio.ShapeCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): Visio.ShapeCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="49ed5-116">`load(option?: { select?: string; expand?: string; }): Visio.ShapeCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="49ed5-116">`load(option?: { select?: string; expand?: string; }): Visio.ShapeCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): Visio.ShapeCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="49ed5-117">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="49ed5-117">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeCollection` - Only available on collection types.</span></span> <span data-ttu-id="49ed5-118">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="49ed5-118">It is similar to the preceding signature.</span></span> <span data-ttu-id="49ed5-119">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="49ed5-119">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="49ed5-120">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="49ed5-120">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="49ed5-121">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="49ed5-121">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.ShapeCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -128,7 +128,7 @@ items:
           type:
             - 'visio!Visio.ShapeCollection#load~0:complex'
   - uid: 'visio!Visio.ShapeCollection#load:member(2)'
-    summary: <span data-ttu-id="49ed5-122">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="49ed5-122">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="49ed5-123">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="49ed5-123">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -142,7 +142,7 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="49ed5-124">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="49ed5-124">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'visio!Visio.ShapeCollection#load:member(3)'
@@ -161,9 +161,9 @@ items:
         - id: option
           description: ''
           type:
-            - 'visio!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'visio!Visio.ShapeCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="49ed5-125">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="49ed5-125">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="49ed5-126">.</span><span class="sxs-lookup"><span data-stu-id="49ed5-126"></span></span> <span data-ttu-id="49ed5-127">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="49ed5-127"></span></span><!-- --><span data-ttu-id="49ed5-128">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Visio.ShapeCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Visio.Interfaces.ShapeCollectionData`</span><span class="sxs-lookup"><span data-stu-id="49ed5-128">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Visio.ShapeCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Visio.Interfaces.ShapeCollectionData`</span></span><!-- --><span data-ttu-id="49ed5-129">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="49ed5-129">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Visio.ShapeCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Visio.Interfaces.ShapeCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -176,7 +176,7 @@ items:
           - 'visio!Visio.Interfaces.ShapeCollectionData:interface'
         description: ''
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.RequestContext:class'
     name: RequestContext
@@ -184,7 +184,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -214,7 +214,7 @@ references:
       - uid: 'visio!Visio.Interfaces.CollectionLoadOptions:interface'
         name: Visio.Interfaces.CollectionLoadOptions
         fullName: Visio.Interfaces.CollectionLoadOptions
-  - uid: 'visio!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'visio!Visio.Interfaces.ShapeCollectionData:interface'
     name: Visio.Interfaces.ShapeCollectionData
